--- a/paper/references.bib
+++ b/paper/references.bib
@@ -446,3 +446,158 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{Cas++13,
+   author = {{Cassata}, P. and {Giavalisco}, M. and {Williams}, C.~C. and 
+    {Guo}, Y. and {Lee}, B. and {Renzini}, A. and {Ferguson}, H. and 
+    {Faber}, S.~F. and {Barro}, G. and {McIntosh}, D.~H. and {Lu}, Y. and 
+    {Bell}, E.~F. and {Koo}, D.~C. and {Papovich}, C.~J. and {Ryan}, R.~E. and 
+    {Conselice}, C.~J. and {Grogin}, N. and {Koekemoer}, A. and 
+    {Hathi}, N.~P.},
+    title = "{Constraining the Assembly of Normal and Compact Passively Evolving Galaxies from Redshift z = 3 to the Present with CANDELS}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1303.2689},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmology: observations, galaxies: evolution, galaxies: fundamental parameters },
+     year = 2013,
+    month = oct,
+   volume = 775,
+      eid = {106},
+    pages = {106},
+      doi = {10.1088/0004-637X/775/2/106},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...775..106C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Lop++12,
+   author = {{L{\'o}pez-Sanjuan}, C. and {Le F{\`e}vre}, O. and {Ilbert}, O. and 
+    {Tasca}, L.~A.~M. and {Bridge}, C. and {Cucciati}, O. and {Kampczyk}, P. and 
+    {Pozzetti}, L. and {Xu}, C.~K. and {Carollo}, C.~M. and {Contini}, T. and 
+    {Kneib}, J.-P. and {Lilly}, S.~J. and {Mainieri}, V. and {Renzini}, A. and 
+    {Sanders}, D. and {Scodeggio}, M. and {Scoville}, N.~Z. and 
+    {Taniguchi}, Y. and {Zamorani}, G. and {Aussel}, H. and {Bardelli}, S. and 
+    {Bolzonella}, M. and {Bongiorno}, A. and {Capak}, P. and {Caputi}, K. and 
+    {de la Torre}, S. and {de Ravel}, L. and {Franzetti}, P. and 
+    {Garilli}, B. and {Iovino}, A. and {Knobel}, C. and {Kova{\v c}}, K. and 
+    {Lamareille}, F. and {Le Borgne}, J.-F. and {Le Brun}, V. and 
+    {Le Floc'h}, E. and {Maier}, C. and {McCracken}, H.~J. and {Mignoli}, M. and 
+    {Pell{\'o}}, R. and {Peng}, Y. and {P{\'e}rez-Montero}, E. and 
+    {Presotto}, V. and {Ricciardelli}, E. and {Salvato}, M. and 
+    {Silverman}, J.~D. and {Tanaka}, M. and {Tresse}, L. and {Vergani}, D. and 
+    {Zucca}, E. and {Barnes}, L. and {Bordoloi}, R. and {Cappi}, A. and 
+    {Cimatti}, A. and {Coppa}, G. and {Koekemoer}, A. and {Liu}, C.~T. and 
+    {Moresco}, M. and {Nair}, P. and {Oesch}, P. and {Schawinski}, K. and 
+    {Welikala}, N.},
+    title = "{The dominant role of mergers in the size evolution of massive early-type galaxies since z \~{} 1}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1202.4674},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: interactions},
+     year = 2012,
+    month = dec,
+   volume = 548,
+      eid = {A7},
+    pages = {A7},
+      doi = {10.1051/0004-6361/201219085},
+   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...548A...7L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{H+C11,
+   author = {{Hennebelle}, P. and {Chabrier}, G.},
+    title = "{Analytical Star Formation Rate from Gravoturbulent Fragmentation}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1110.0033},
+ keywords = {ISM: clouds, turbulence, stars: formation},
+     year = 2011,
+    month = dec,
+   volume = 743,
+      eid = {L29},
+    pages = {L29},
+      doi = {10.1088/2041-8205/743/2/L29},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...743L..29H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Hop12,
+   author = {{Hopkins}, P.~F.},
+    title = "{The stellar initial mass function, core mass function and the last-crossing distribution}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1201.4387},
+ primaryClass = "astro-ph.GA",
+ keywords = {galaxies: active, galaxies: evolution, galaxies: formation, galaxies: star formation, cosmology: theory},
+     year = 2012,
+    month = jul,
+   volume = 423,
+    pages = {2037-2044},
+      doi = {10.1111/j.1365-2966.2012.20731.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.423.2037H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{BCM10,
+   author = {{Bastian}, N. and {Covey}, K.~R. and {Meyer}, M.~R.},
+    title = "{A Universal Stellar Initial Mass Function? A Critical Look at Variations}",
+  journal = {\araa},
+archivePrefix = "arXiv",
+   eprint = {1001.2965},
+     year = 2010,
+    month = sep,
+   volume = 48,
+    pages = {339-389},
+      doi = {10.1146/annurev-astro-082708-101642},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ARA%26A..48..339B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{GKH15,
+   author = {{Guszejnov}, D. and {Krumholz}, M.~R. and {Hopkins}, P.~F.},
+    title = "{The Necessity of Feedback Physics in Setting the Peak of the Initial Mass Function}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1510.05040},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+     year = 2015,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151005040G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Ilb++13,
+   author = {{Ilbert}, O. and {McCracken}, H.~J. and {Le F{\`e}vre}, O. and 
+	{Capak}, P. and {Dunlop}, J. and {Karim}, A. and {Renzini}, M.~A. and 
+	{Caputi}, K. and {Boissier}, S. and {Arnouts}, S. and {Aussel}, H. and 
+	{Comparat}, J. and {Guo}, Q. and {Hudelot}, P. and {Kartaltepe}, J. and 
+	{Kneib}, J.~P. and {Krogager}, J.~K. and {Le Floc'h}, E. and 
+	{Lilly}, S. and {Mellier}, Y. and {Milvang-Jensen}, B. and {Moutard}, T. and 
+	{Onodera}, M. and {Richard}, J. and {Salvato}, M. and {Sanders}, D.~B. and 
+	{Scoville}, N. and {Silverman}, J.~D. and {Taniguchi}, Y. and 
+	{Tasca}, L. and {Thomas}, R. and {Toft}, S. and {Tresse}, L. and 
+	{Vergani}, D. and {Wolk}, M. and {Zirm}, A.},
+    title = "{Mass assembly in quiescent and star-forming galaxies since z {\sime} 4 from UltraVISTA}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1301.3157},
+ keywords = {galaxies: distances and redshifts, galaxies: evolution, galaxies: formation, galaxies: star formation, galaxies: stellar content},
+     year = 2013,
+    month = aug,
+   volume = 556,
+      eid = {A55},
+    pages = {A55},
+      doi = {10.1051/0004-6361/201321100},
+   adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...556A..55I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
