--- a/paper/dry_merging_imf.tex
+++ b/paper/dry_merging_imf.tex
@@ -58,8 +58,12 @@ $^{3}$Department of Physics and Astronomy, Bologna University, viale Berti-Picha
 
 %-------------------------------------------------------------------------------
 \begin{abstract}
-Abstract.
-We conclude that it is challenging to infer what regulates the IMF from $z=0$ observations of global properties of galaxies.
+The stellar IMF of early-type galaxies is the combination of the IMF of the stellar population formed in-situ and that of accreted stellar populations.
+We introduce the concept of effective IMF, defined as the ratio between the true stellar mass of a galaxy and the stellar mass inferred assuming a Chabrier IMF, and present a theoretical model for its evolution as a result of dry mergers.
+Using the dry merger evolution model from \citet{Nip++12} together with empirically motivated prescriptions for the IMF we make predictions for how the effective IMF of massive early-type galaxies changes between $z=2$ and $z=0$.
+We find that trends of the IMF with stellar mass or velocity dispersion are preserved by dry mergers, but become less strong with time.
+We also find that dry mergers can mix the dependence of the IMF on stellar mass and velocity dispersion
+, making it challenging to infer what quantity regulates the IMF from $z=0$ observations of global galactic properties.
 \end{abstract}
 
 \begin{keywords}
@@ -69,9 +73,10 @@ We conclude that it is challenging to infer what regulates the IMF from $z=0$ ob
 %-------------------------------------------------------------------------------
 \section{Introduction}\label{sect:intro}
 
-Observations of massive early-type galaxies at $z\sim0$ show a trend of stellar IMF with galaxy mass, with the most massive systems having on average a heavier IMF \citep{Tre++10,Cap++12}.
-Efforts have been put into reproducing from a theoretical standpoint the observed IMF trends. However, despite recent progress, we still lack a coherent description of star formation across all environments.
-The variation in the IMF might be the result of different conditions in the star-forming gas in different galaxies \citep{Hop13}.
+Undrstanding the origin of the stellar initial mass function (IMF) is currently one of the biggest challenges in galaxy formation theory.
+Observational constraints on the IMF provide us with a puzzling scenario, where the IMF appears to be remarkably self-similar across different environments within the Milky Way \citep[see e.g.][]{BCM10}, while it is inferred to vary systematically as a function of mass in massive early-type galaxies \citep{Tre++10,Cap++12,CvD12,Spi++14}.
+Efforts have been put into reproducing from a theoretical standpoint the observed IMF trends. However, despite recent progress \citep{H+C11,Kru11,Hop12,GKH15}, we still lack a coherent description of star formation across all environments.
+
 One complication in comparing measurements of the IMF with models is that present day stellar populations are ensembles of stars formed a different epochs in a range of environments.
 For massive early-type gaalxies, a significant fraction of their present day stellar mass is believed to be accreted from other systems \citep{vDo++10}.
 If the IMF is not universal, then each accreted object will in general have a different IMF from the preexisting population of the central galaxy.
@@ -80,12 +85,11 @@ How does this "effective" IMF evolve in time?
 
 In this work we model the evolution of the effective IMF of massive galaxies from $z=2$ to the present.
 We adopt a simple prescription for assigning the starting IMF of an ensemble of galaxies and then evolve the stellar population of central galaxies by merging their stellar content with that of accreted satellites.
-
 We tune our model to match the observed IMF-stellar mass trend at $z=0$ and use it to make predictions on the stellar IMF at higher redshifts.
 
-The paper is organized as follows.  In \Sref{sect:model} we describe our model.
+The paper is organized as follows.  In \Sref{sect:model} we describe our model for the IMF of $z=2$ galaxies and its evolution as a result of dry mergers.
 In \Sref{sect:results} we show our predictions on the time evolution of the IMF.
-We discuss our results in \Sref{sect:discuss} and draw conclusions in \Sref{sect:concl}.
+We discuss and summarize our results in \Sref{sect:discuss}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -160,14 +164,14 @@ we do not keep track of the spatial distribution of stars within our galaxies. A
 In \Fref{fig:snap} we plot the IMF mismatch parameter for our mock sample of galaxies at three different redshifts ($z=2$, $z=1$ and $z=0$), as a function of stellar mass and velocity dispersion, for each model.
 At each redshift snapshot we fit \Eref{eq:mstarmodel} and \Eref{eq:sigmamodel} to the mock data with a least-squares method. Best-fit curves are overplotted in \Fref{fig:snap}.
 %
-\begin{figure}
+\begin{figure*}
  \includegraphics[width=\textwidth]{snapshots.eps}
  \caption{ IMF mismatch parameter $\aimf$ as a function of stellar mass ({\em left panels}) and central velocity dispersion ({\em right panels}) for the ``$M_*$ model'' ({\em top panels}) and ``$\sigma$ model'' ({\em bottom panels}) IMF recipes, at three different redshifts.
 {\em Dashed lines:} Linear fit to the data in each redshift snapshot.
 {\em Shaded regions:} Observational constraints from \citet{Son++15} ({\em left panels}) and \citet{Pos++15} ({\em right panels})
 }
  \label{fig:snap}
-\end{figure}
+\end{figure*}
 %
 \begin{table}
  \caption{Best-fit parameters of \Eref{eq:mstarmodel} and \Eref{eq:sigmamodel} to the mock data shown in \Fref{fig:snap}. The third number in each set represents the residual scatter around the best fit relation.}
@@ -186,10 +190,10 @@ At each redshift snapshot we fit \Eref{eq:mstarmodel} and \Eref{eq:sigmamodel} t
 As can be seen by comparing the left hand panels in \Fref{fig:snap} with the right hand panels, correlations between IMF and stellar mass correspond to similar correlations with velocity dispersion, and vice-versa. This is just a consequence of the tight correlation between galaxy stellar mass and velocity dispersion in the mock sample (and in observations). 
 Trends of $\aimf$ with stellar mass and velocity dispersion, which we assumed in place at $z=2$, are mostly preserved by dry mergers down to $z=0$, but become less steep with time.
 
-By $z=1$ a relatively large scatter is introduced in the $\aimf-\sigma$ space (right hand panels of \Fref{fig:snap}), even for the ``$\sigma$ model'' where the sample is initialized at $z=2$ with zero scatter. This is mostly driven by the evolution of galaxies in the most massive halos: these objects experience the highest merger rates and their change in velocity dispersion is correspondingly high. We will discuss this point more in the next Section.
+By $z=1$ a relatively large scatter is introduced in the $\aimf-\sigma$ space (right hand panels of \Fref{fig:snap}), even for the ``$\sigma$ model'' where the sample is initialized at $z=2$ with zero scatter. This is mostly driven by the evolution of galaxies in the most massive halos: these objects experience the highest merger rates and their change in velocity dispersion is correspondingly high. %We will discuss this point more in the next Section.
 
-For a given row in \Fref{fig:snap}, a look at the $z=2$ scatter plots in stellar mass and velocity dispersion space allows anyone to immediately identify which IMF recipe was used to produce the mock data.
-The same procedure becomes nontrivial at $z=0$ due to scatter.
+For a given row in \Fref{fig:snap}, a look at the $z=2$ scatter plots in stellar mass and velocity dispersion space allows us to immediately identify which IMF recipe was used to produce the mock data.
+The same procedure becomes non-trivial at $z=0$ due to scatter.
 In order to test how accurately observations can discriminate between the two scenarios, we now perform fits in which the IMF can depend both on stellar mass and velocity dispersion:
 \begin{equation}\label{eq:hybrid}
 %\log{\aimf} = \frac{\partial \log{\aimf}}{\partial \log{M_*}}(\log{M_*} - 11) + \frac{\partial\log{\aimf}}{\partial\log{\sigma}}(\log{\sigma} - 2.3) + \log{\alpha_0}.
@@ -197,7 +201,17 @@ In order to test how accurately observations can discriminate between the two sc
 \end{equation}
 In \Fref{fig:tracks} we plot the measured values of $a_*$ and $a_\sigma$ at each timestep.
 In addition to the ``$M_*$ model'' and ``$\sigma$ model'' described above we also test a ``Hybrid model'' in which the IMF depends both on stellar mass and velocity dispersion as described by \Eref{eq:hybrid}, 
-with $a_*=0.3$, $a_\sigma=1.5$, $b=0.0$.
+with $a_*=0.2$, $a_\sigma=1.5$, $b=0.0$.
+%
+\begin{figure}
+ \includegraphics[width=\columnwidth]{tracks.eps}
+ \caption{ 
+Coefficients $a_*$ and $a_\sigma$, describing the dependence of the effective IMF on stellar mass and velocity dispersion, obtained by fitting \Eref{eq:hybrid} to mock data generated with the ``$M_*$ model'', ``$\sigma$ model'' and ``Hybrid model'' prescriptions at each timestep.
+}
+ \label{fig:tracks}
+\end{figure}
+%
+The starting ($z=2$) point in the $a_*-a_\sigma$ space is by construction very different for the three mock sets. However by $z=0$ the tracks corresponding to the different models converge to intemediate values of $a_*$ and $a_\sigma$, meaning that, for the three models tested here, the $z=0$ effective IMF appears to depend both on stellar mass and velocity dispersion regardless of the starting point.
 
 
 %One of the goals of observational studies of the IMF in massive galaxies is to determine which, among the global properties of galaxies, is the fundamental quantity the IMF appears to depend on.
@@ -208,16 +222,52 @@ with $a_*=0.3$, $a_\sigma=1.5$, $b=0.0$.
 
 
 
-%\section{Discussion}\label{sect:discuss} 
+\section{Discussion and Summary}\label{sect:discuss} 
 
-%\subsection{Consistency checks}
+Using empirically motivated recipes for describing the IMF of massive galaxies together with the dry merger evolution model developed by \citet{Nip++12} we studied the time evolution of the effective IMF, defined as the ratio between the true stellar mass and the stellar mass one would infer assuming a Chabrier IMF, of a population of massive galaxies from $z=2$ to $z=0$.
+The models were set up to match the observed correlations between IMF and stellar mass and velocity dispersion in massive early-type galaxies at $z\sim0$.
+Qualitatively, the trends imposed at $z=2$ are preserved with dry mergers. Quantitatively, we find that the amplitude of the correlations between effective IMF and galaxy stellar mass or velocity dispersion decreases with time.
 
-%\subsection{Caveats}
-%There's no scatter.
-%We ignore progenitor bias.
+To understand the origin of this evolution, in \Fref{fig:cornerplot} we plot the fractional change in effective IMF between $z=2$ and $z=0$, $\Delta\log{\aimf}=\log{\aimf}(z=0)-\log{\aimf}(z=2)$ of our mock galaxies together with key quantities such as the initial halo mass and initial stellar mass and accreted stellar mass. 
+%
+\begin{figure*}
+ \includegraphics[width=\textwidth]{cornerplot.eps}
+ \caption{{\em Purple dots}: ``$M_*$ model''. {\em Green dots}: ``$\sigma$ model''
+}
+ \label{fig:cornerplot}
+\end{figure*}
+%
+The effective IMF of individual galaxies in our sample generally decreases with time ($\Delta\log{\aimf}<0$). This is easily understood, as by definition central galaxies merge with less massive systems that, in our model, have a less heavy IMF. 
+In order to produce a dependence of the IMF on mass that becomes shallower with time, it is necessary for the more massive systems to have a stronger decrease in their IMF with time (more negative values of $\Delta\log{\aimf}$).
+As can be seen in the bottom left panel of \Fref{fig:cornerplot}, this is indeed the case.
+
+Differences in $\Delta\log{\aimf}$ reflect differences in merger history.
+Since mergers tend to decrease the effective IMF normalization, we expect galaxies with the highest increase in stellar mass to also show the largest changes in effective IMF. However this is not observed to be the case, as can be seen from \Fref{fig:cornerplot} (fourth row, third column).
+If the amount of accretion does not play a central role in setting the final IMF, then the different change in IMF between low mass and high mass systems must be set by differences in the type of mergers. To quantify this, we measure the accreted stellar mass-weighted merger mass ratio, $\left< \xi \right>_*$, defined as the average over all mergers between $z=2$ and $z=0$ of the halo mass ratio between the accreted satellites and the central halo weighted by the accreted stellar mass with each merger. $\left< \xi \right>_*$ is also plotted in \Fref{ref:cornerplot}. We see that $\left< \xi \right>_*$ increases for decreasing halo and stellar mass.
+This means that for the most massive galaxies the bulk of the accreted stellar mass is brought in through mergers of relatively small mass ratio, while for less massive galaxies major mergers play a more important role.
+Given our IMF prescription, where the heaviness of the IMF of satellites increases with mass, minor mergers produce a stronger decrease in the effective IMF of a galaxy than major mergers at fixed accreted stellar mass. 
+This is seen in the bottom right panel of \Fref{fig:cornerplot}, where $\left< \xi \right>_*$ correlates with the change in effective IMF.
+We then conclude that the shallowing of the $M_*-\aimf$ or $\sigma-\aimf$ trends with time seen in our \Fref{fig:snap} is a result of the different relative importance of major and minor mergers in systems at the 
+
+A few systems at the low mass end of the distribution show an increase in the effective IMF normalization ($\Delta \log{\aimf} > 0$), apparently at odds with expectations. Although at $z=2$ any merger will produce a decrease in IMF normalization, as time goes by and galaxies grow it becomes possible for them to accrete satellites with stellar mass larger than their original mass at $z=2$. Since in our model the IMF of satellites does not evolve with time, these major mergers will then bring in galaxies with a heavier IMF than the central, hence the positive $\Delta\log{\aimf}$.
+
+Another prediction of our model is the mixing between stellar mass and velocity dispersion dependence of the IMF shown in \Fref{fig:tracks}.
+The (small) dependence of velocity dispersion, $a_\sigma$, seen at $z=0$ in the ``$M_*$ model'' can be easily understood. At $z=0$, at fixed stellar mass, we find galaxies with a range of initial stellar masses at $z=2$. Those with a larger $z=2$ stellar mass have a slower growth by definition, a heavier $z=2$ IMF by construction and a larger $z=2$ velocity dispersion on average. The ranking in $\sigma$ and $\aimf$ between those systems is roughly preserved by the dry merger evolution. Therefore at fixed $z=0$ stellar mass, objects with larger velocity dispersion will also have on average a heavier IMF.
+
+The emergence of the stellar mass dependence in the ``$\sigma$ model'' is instead due to the distortion of the $\sigma-\aimf$ relation at $z=0$, apparent in the bottom right panel of \Fref{fig:snap} where the trend in IMF flattens at the low-$\sigma$ end. A model in which the IMF depends both on $\sigma$ and $M_*$ is simply a better fit to the data. 
+
+An important assumption in our model is that all of the growth in stellar mass between $z=2$ and $z=0$ is due to dry mergers. In other terms, our model only applies to the population of quiescent galaxies at $z=2$. This assumption complicates the comparison between predictions from our model and observations, because the number density of quiescent galaxies is observed to increase substantially with time, in particular at $z>1$ \citep[e.g.][]{Ilb++13, Cas++13}. Depending on what the IMF of the newly quenched object is, some results might change as a result of the so-called progenitor bias. However: predictions on the $z<1$ evolution for the high-mass end of the galaxy distribution should still hold, since the number density of quiescent galaxies shows little evolution in that region of the parameter space \citep{Lop++12}.
+
+%Another assumption we made is not allowing scatter in the merger history, as this is set by the halo mass. We tested this assumption by adding a 20% scatter in the merger rate and a scatter of $0.02$ in the allowed minimum merger mass ratio. No significant differences were found with respect ot the case with no scatter. 
+
+To summarize, we predicted the evolution of the IMF in massive galaxies between $z=2$ and $z=0$ assuming a purely dry merger evolution.
+We find that trends between stellar mass and velocity dispersion are qualitatively preserved by dry mergers, but the amplitude of the correlations decreases with time. 
+At fixed stellar mass, we find that the IMF normalization decreases by $0.06\div0.08$ dex between $z=1$ and $z=0$ (depending on the prescription used). Current constraints from strong lensing on the redshift dependence of the IMF are consistent within $2-\sigma$ \citep[parameter $\zeta_{\mathrm{IMF}}$ of]{Son++15}.
+Finally, we find that the relative dependence of the IMF on stellar mass and velocity dispersion gets mixed by dry mergers, making it difficult to observationally determine the fundamental parameter(s) governing the IMF from $z=0$ measurements.
 
 
-\section{Conclusions}\label{sect:concl} 
+
+%\section{Conclusions}\label{sect:concl} 
 
 \section*{acknowledgments}
 %-------------------------------------------------------------------------------
